--- a/src/main/webapp/pages/ManageRoles/ManageRoles.html
+++ b/src/main/webapp/pages/ManageRoles/ManageRoles.html
@@ -146,6 +146,17 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
+                                <wm-tabpane name="tabpane4" title="Inspection Roles">
+                                    <wm-layoutgrid name="layoutgrid7">
+                                        <wm-gridrow name="gridrow17">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn19"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn20"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow18">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn21"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
                                 <wm-tabpane name="tabpane3" title="CX Admin">
                                     <wm-livegrid formlayout="dialog" name="livegridCXAdmin">
                                         <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.CXAdminRolesData.dataSet" navigation="Classic" name="gridCXAdmin">
