--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -10,7 +10,7 @@
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow19">
+                <wm-gridrow name="gridrow19" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn30">
                         <wm-panel iconclass="wi wi-account-circle" name="panelProfileInfo" title="User Details" badgetype="primary" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5">
@@ -103,7 +103,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow7_1">
+                <wm-gridrow name="gridrow7_1" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
                         <wm-panel iconclass="wi wi-account-balance" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5_2">
@@ -149,7 +149,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow31">
+                <wm-gridrow name="gridrow31" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn32">
                         <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel4" title="My Companies" class="panel-primary" show="bind:Variables.GetUserVendors.dataSet.data[$i].id != null">
                             <wm-layoutgrid name="layoutgrid9">
@@ -185,7 +185,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow35" padding="1em unset">
+                <wm-gridrow name="gridrow35" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn35_1">
                         <wm-panel iconclass="wi wi-remove-red-eye" title="Display Preferences" class="panel-primary" name="panelPreferences">
                             <wm-layoutgrid name="layoutgrid11">
@@ -208,7 +208,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow22_1">
+                <wm-gridrow name="gridrow22_1" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn36">
                         <wm-panel iconclass="wi wi-notifications" name="panelMyNotifications" title="Notification Settings" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid8_1">
@@ -231,7 +231,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow17_1">
+                <wm-gridrow name="gridrow17_1" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20_1">
                         <wm-form errormessage="" captionposition="top" title="Update Password" enctype="application/x-www-form-urlencoded" method="put" dataset="UpdateNewPassword" captionalign="left" name="form1" postmessage="Password updated successfully"
                         messagelayout="Toaster" class="panel-primary" iconclass="wi wi-vpn-key">
