--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -241,7 +241,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-primary" caption="Add Member" type="button" margin="unset 0.5em" name="buttonAddMember" iconclass="wi wi-plus" on-click="Variables.AddMembersToProject.invoke()"></wm-button>
+                <wm-button class="btn-primary" caption="Add Member" type="button" margin="unset 0.5em" name="buttonAddMember" iconclass="wi wi-plus" on-click="Variables.AddMembersToProject.invoke()" disabled="bind:Widgets.searchForMembers.datavalue == null"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
