--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -25,7 +25,41 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2" padding="1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-panel iconclass="wi wi-pencil" autoclose="outsideClick" name="panelInspectionDesigns" title="My Inspection Designs" class="panel-primary"></wm-panel>
+                        <wm-panel iconclass="wi wi-pencil" autoclose="outsideClick" name="panelInspectionDesigns" title="My Inspection Designs" class="panel-primary">
+                            <wm-livegrid formlayout="dialog" name="livegridInspectiondesign">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.InspectionDesignData.dataSet" navigation="Classic" name="gridInspectiondesign">
+                                    <wm-grid-column binding="inspectDesignName" caption="Inspect Design Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="createdAt" caption="Created At" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="timestamp" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="" title="Inspectiondesign Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionDesignData.dataSet" captionalign="left" captionposition="top" name="liveformInspectiondesign">
+                                    <wm-layoutgrid columns="1" name="layoutgrid2">
+                                        <wm-gridrow name="gridrow5">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                                <wm-form-field name="inspectDesignName" displayname="Inspect Design Name" show="true" primary-key="false" generator="assigned" key="inspectDesignName" type="string" readonly="false" required="false" widget="text"
+                                                maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow6">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn7">
+                                                <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value"
+                                                defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-field name="createdAt" displayname="Created At" show="false" primary-key="false" generator="assigned" key="createdAt" type="timestamp" readonly="false" required="false" widget="timestamp" placeholder="Select date time"
+                                    outputformat="timestamp" defaultvalue="CURRENT_DATE"></wm-form-field>
+                                    <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="false" required="false"
+                                    widget="select" placeholder="Select value" defaultvalue="bind:Variables.SelectedMunicipalityObject.firstRecord" dataset="bind:Variables.SelectedMunicipalityObject.dataSet" datafield="All Fields" displayfield="municipalityName"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
+                        </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4_1" padding="1em unset">
