--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -35,7 +35,7 @@
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Inspectiondesign Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionDesignData.dataSet" captionalign="left" captionposition="top" name="liveformInspectiondesign">
+                                <wm-liveform novalidate="false" errormessage="" title="Add Inspection Design" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionDesignData.dataSet" captionalign="left" captionposition="top" name="liveformInspectiondesign">
                                     <wm-layoutgrid columns="1" name="layoutgrid2">
                                         <wm-gridrow name="gridrow5">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn6">
@@ -64,7 +64,44 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4_1" padding="1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                        <wm-panel iconclass="wi wi-group-work" autoclose="outsideClick" title="Inspection Categories" class="panel-primary" name="panelInspectionCategories"></wm-panel>
+                        <wm-panel iconclass="wi wi-group-work" autoclose="outsideClick" title="Inspection Categories" class="panel-primary" name="panelInspectionCategories">
+                            <wm-livegrid formlayout="dialog" name="livegridInspectioncategories">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="Inspectioncategories List" dataset="bind:Variables.InspectionCategoriesData.dataSet" navigation="Classic" name="gridInspectioncategories">
+                                    <wm-grid-column binding="inspectionCategory" caption="Inspection Category" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="inspectionCategoryDescription" caption="Inspection Category Description" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="" title="Add Inspection Categories" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionCategoriesData.dataSet" captionalign="left" captionposition="top"
+                                name="liveformInspectioncategories">
+                                    <wm-layoutgrid columns="1" name="layoutgrid3">
+                                        <wm-gridrow name="gridrow7">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn8">
+                                                <wm-form-field name="inspectionCategory" displayname="Inspection Category" required="false" show="true" generator="assigned" primary-key="false" key="inspectionCategory" type="string" is-related="false" maxchars="255"
+                                                pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow8">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn9">
+                                                <wm-form-field name="inspectionCategoryDescription" displayname="Inspection Category Description" required="false" show="true" generator="assigned" primary-key="false" key="inspectionCategoryDescription" type="string"
+                                                is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow9">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn10">
+                                                <wm-form-field name="municipalities" displayname="Municipalities" required="false" show="false" generator="assigned" primary-key="false" key="municipalities" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                                widget="select" defaultvalue="bind:Variables.SelectedMunicipalityObject.firstRecord" dataset="bind:Variables.SelectedMunicipalityObject.dataSet" datafield="All Fields" displayfield="municipalityName"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
+                                    <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
+                        </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
