--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -501,10 +501,11 @@
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                                             <wm-panel iconclass="wi wi-group-work" autoclose="outsideClick" title="Inspection Categories" class="panel-primary" name="panelInspectionCategories">
                                                 <wm-livegrid formlayout="dialog" name="livegridFormtoinspectioncategory">
-                                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" navigation="Classic" name="gridFormtoinspectioncategorymapp">
+                                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" navigation="Classic" name="gridFormtoinspectioncategorymapp" filtermode="multicolumn"
+                                                    exportformat="EXCEL" showrecordcount="true">
                                                         <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Inspection Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
-                                                        <wm-grid-column binding="addedAt" caption="Added At" type="timestamp" primary-key="false" generator="assigned" edit-widget-type="timestamp" show="true" readonly="false"></wm-grid-column>
-                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                        <wm-grid-column binding="addedAt" caption="Added At" type="timestamp" primary-key="false" generator="assigned" edit-widget-type="timestamp" show="true" filterwidget="text" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
@@ -537,7 +538,7 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4_1" padding="1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                            <wm-panel iconclass="wi wi-pencil" autoclose="outsideClick" name="panelInspectionSequence" title="Inspection Sequence" class="panel-primary"></wm-panel>
+                                            <wm-panel iconclass="wi wi-format-list-numbered" autoclose="outsideClick" name="panelInspectionSequence" title="Inspection Sequence" class="panel-primary"></wm-panel>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
