--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -24,18 +24,19 @@
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow55">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn80">
-                                            <wm-label padding="unset 0.5em" name="label15" caption="You can assign this InspectionDesign to one or many Inspection Categories. This will affect where the Inspection appears to CivicXpress users, makes the Inspection searchable by Category, and is used to generate Municipality Analytics."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label15" caption="You can assign this Inspection Design to one or many Inspection Categories. This will affect where the Inspection appears to CivicXpress users, makes the Inspection searchable by Category, and is used to generate Municipality Analytics."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow26">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn53">
                                             <wm-livegrid formlayout="dialog" name="livegridInspectioncategorymappin">
-                                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.InspectionCategoryMappingData.dataSet" navigation="Classic" name="gridInspectioncategorymapping">
-                                                    <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Inspection Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
-                                                    <wm-grid-column binding="inspectionCategories.inspectionCategoryDescription" caption="Category Description" type="string" generator="assigned" readonly="true" edit-widget-type="text"
-                                                    show="true" related-entity-name="InspectionCategories"></wm-grid-column>
-                                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.InspectionCategoryMappingData.dataSet" navigation="Classic" name="gridInspectioncategorymapping" filtermode="multicolumn"
+                                                exportformat="EXCEL" showrecordcount="true">
+                                                    <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
+                                                    <wm-grid-column binding="inspectionCategories.inspectionCategoryDescription" caption="Description" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                                                    related-entity-name="InspectionCategories"></wm-grid-column>
+                                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                    <wm-grid-action key="addNewRow" display-name="Add Category" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Category" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
                                                 <wm-liveform novalidate="false" errormessage="" title="Add Category" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionCategoryMappingData.dataSet" captionalign="left" captionposition="top"
