--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -9,6 +9,9 @@
         <wm-nav-item name="list_order">
             <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-account-balance" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin" badgevalue="bind:Variables.ProcessFormsCountForEmployee.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item11">
+            <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
+        </wm-nav-item>
         <wm-nav-item name="list_inventory">
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-domain" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin" badgevalue="bind:Variables.FormDesignsForMuniAdmin.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
@@ -29,9 +32,6 @@
         </wm-nav-item>
         <wm-nav-item name="nav_item9_1">
             <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
-        </wm-nav-item>
-        <wm-nav-item name="nav_item11">
-            <wm-anchor name="anchorInspections" iconclass="wi wi-search" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
         </wm-nav-item>
     </wm-nav>
 </wm-partial>
